--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Yuan Feng</title>
+  <title>Yachen LUO</title>
   <meta charset="UTF-8">
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
@@ -16,7 +16,7 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">Yuan Feng</a></h1>
+          <h1><a href="index.html">Yachen Luo</a></h1>
           <!-- <h2>Computational Mechanics, Ph.D. , UC Davis</h2> -->
         </div>
       </div>
@@ -24,9 +24,9 @@
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li class="selected"><a href="index.html">Home</a></li>
-          <li><a href="Code.html">Code</a></li>
+          <!-- <li><a href="Code.html">Code</a></li> -->
           <li><a href="Publication.html">Publication</a></li>
-          <li><a href="Gallery.html">Gallery</a></li>
+          <!-- <li><a href="Gallery.html">Gallery</a></li> -->
         </ul>
       </div>
     </div>
@@ -82,10 +82,10 @@
         <h1>About</h1>
         <!-- <h2>Browser Compatibility</h2> -->
         <p>
-          Yuan Feng works as a senior data scientist at 
-          <a href="https://www.walmartlabs.com/" target="_blank" rel="noopener">Walmart Labs</a>.
-          He received his Ph.D degree from 
-          <a href="http://cee.engr.ucdavis.edu/" target="_blank" rel="noopener">University of California, Davis</a>.
+          Yachen LUO works as a Psychometrician intern at 
+          <a href="http://www.fldoe.org/" target="_blank" rel="noopener">Florida Department of Education</a>.
+          She is going to receive her Ph.D degree from 
+          <a href="https://www.fsu.edu/" target="_blank" rel="noopener">Florida State University</a>.
 
 <!--           I completed my bachelors with major in Civil Engineering at 
           <a href="http://en.njtu.edu.cn/" target="_blank" rel="noopener">Beijing Jiaotong University</a>.  -->
@@ -132,18 +132,18 @@
 
         <h3>Experiences</h3>
         <p>
-          Senior Data Scientist at 
-          <a href="https://www.walmartlabs.com/" target="_blank" rel="noopener">Walmart Labs</a>.
-          (October 2019 - Present)
+          Psychometrician intern at 
+          <a href="http://www.fldoe.org/" target="_blank" rel="noopener">Florida Department of Education</a>.
+          (July 2018 - Present)
         </p>
         <p>
-          Research Scientist at 
-          <a href="http://www.tusimple.com/" target="_blank" rel="noopener">TuSimple</a>.
-          (January 2019 - September 2019)
+          Graduate Research and Teaching Assistant at 
+          <a href="https://www.fsu.edu/" target="_blank" rel="noopener">Florida State University</a>.
+          (Aug 2015 - Present)
         </p>
         <p>
-          Software Engineer Intern at 
-          <a href="http://www.tusimple.com/" target="_blank" rel="noopener">TuSimple</a>. 
+          Data Analyst & Research Assistant
+          <a href="http://cicabeq.bnu.edu.cn/index.shtml" target="_blank" rel="noopener">National Assessment Center for Education Quality</a>. 
           (Summer 2018)
         </p>
 
@@ -153,7 +153,7 @@
         <h3>Contact</h3>
         <p>
           <strong>Email </strong>
-          yuanfeng.energy@gmail.com
+          yachenluo0189@gmail.com
         </p>
 <!--         <p>
           <strong>Phone</strong>
@@ -161,22 +161,17 @@
         </p> -->
         <p>
           <strong>GitHub</strong>
-          <a href="https://github.com/yuan-feng" target="_blank" rel="noopener">
-          https://github.com/yuan-feng</a>
-        </p>
-        <p>
-          <strong>GitHub</strong>
-          <a href="https://github.com/yuan-energy" target="_blank" rel="noopener">
-          https://github.com/yuan-energy</a>
+          <a href="https://github.com/yachenluo" target="_blank" rel="noopener">
+          https://github.com/yachenluo</a>
         </p>
         <p>
           <strong>Google Scholar</strong>
-          <a href="https://scholar.google.com/citations?user=PAQpz1kAAAAJ&hl=en" target="_blank" rel="noopener">
+          <a href="https://scholar.google.com/citations?user=jNWyCiIAAAAJ&hl=en" target="_blank" rel="noopener">
           link to google scholar</a>
         </p>
         <p>
           <strong>LinkedIn</strong>
-          <a href="https://www.linkedin.com/in/yuan-feng-754426a4/" target="_blank" rel="noopener">
+          <a href="https://www.linkedin.com/in/yachen-luo-0a583ba8/" target="_blank" rel="noopener">
           link to LinkedIn</a>
         </p>
 <!--         <p>
@@ -202,7 +197,7 @@
          <a href="Gallery.html">Gallery</a>
       </p>
       
-      <p>Copyright &copy; Yuan Feng  
+      <p>Copyright &copy; Yachen LUO  
         <!-- | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> |  -->
         <!-- <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> |  -->
         <!-- <a href="http://www.html5webtemplates.co.uk">HTML5 Web Templates</a> -->
