--- a/Gallery.html
+++ b/Gallery.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Yuan Feng</title>
+  <title>Yachen LUO</title>
   <meta charset="UTF-8">
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
@@ -16,7 +16,7 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">Yuan Feng</a></h1>
+          <h1><a href="index.html">Yachen LUO</a></h1>
           <!-- <h2>Computational Mechanics, Ph.D. Candidate, UC Davis</h2> -->
         </div>
       </div>
@@ -127,7 +127,7 @@
          <a href="Gallery.html">Gallery</a>
       </p>
       
-      <p>Copyright &copy; Yuan Feng  
+      <p>Copyright &copy; Yachen LUO  
         <!-- | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> |  -->
         <!-- <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> |  -->
         <!-- <a href="http://www.html5webtemplates.co.uk">HTML5 Web Templates</a> -->
