--- a/Publication.html
+++ b/Publication.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Yuan Feng</title>
+  <title>Yachen LUO</title>
   <meta charset="UTF-8">
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
@@ -16,7 +16,7 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">Yuan Feng</a></h1>
+          <h1><a href="index.html">Yachen LUO</a></h1>
           <!-- <h2>Computational Mechanics, Ph.D. Candidate, UC Davis</h2> -->
         </div>
       </div>
@@ -24,9 +24,9 @@
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li><a href="index.html">Home</a></li>
-          <li><a href="Code.html">Code</a></li>
+          <!-- <li><a href="Code.html">Code</a></li> -->
           <li class="selected"><a href="Publication.html">Publication</a></li>
-          <li><a href="Gallery.html">Gallery</a></li>
+          <!-- <li><a href="Gallery.html">Gallery</a></li> -->
         </ul>
       </div>
     </div>
@@ -84,7 +84,7 @@
         <h2>Books</h2>
           <p>&bull; 
             Boris Jeremić with contributions by Zhaohui Yang, Zhao Cheng, Guanzhou Jie, Nima Tafazzoli, Panagiota Tasiopoulou, Federico Pisanò, José Abell, Kohei Watanabe, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Sumeet Kumar Sinha, Fatemah Behbehani, Han Yang, Maxime Lacour and Hexiang Wang. Computational Mechanics: Inelastic Finite Elements for Pressure Sensitive Materials. Available upon request (not for sale). 2302 pages, 2017. 
             [<a href="http://sokocalo.engr.ucdavis.edu/~jeremic/LectureNotes/" target="_blank" rel="noopener">Link</a>]. 
           </p>
@@ -94,14 +94,14 @@
           <p>
             &bull; 
             Han Yang, Sumeet Kumar Sinha, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             David B McCallen, and Boris Jeremić. Energy dissipation analysis of elastic-plastic materials. Computer Methods in Applied Mechanics and Engineering. 2017.
             [<a href="https://www.sciencedirect.com/science/article/pii/S0045782517307144" target="_blank" rel="noopener">Link</a>]. 
 
           </p>
           <p>
             &bull; 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Xi Chen, and Xi Frank Xu. "Current status and potentials of enhanced geothermal system in China: A review." Renewable and Sustainable Energy Reviews 33 (2014): 214-223.
             [<a href="https://www.sciencedirect.com/science/article/pii/S1364032114000963" target="_blank" rel="noopener">Link</a>]. 
             
@@ -110,7 +110,7 @@
           <p>
             &bull; 
             Chen, Xi, JianKun Liu, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Xu Li, YaHu Tian, and JianHong Fang. "A pseudo-coupled numerical approach for stability analysis of frozen soil slopes based on finite element limit analysis method." Sciences in Cold and Arid Regions 5, no. 4 (2013): 478-487.
             [<a href="http://www.scar.ac.cn/hhkxen/ch/reader/create_pdf.aspx?file_no=2013420&year_id=2013&quarter_id=4&falg=1" target="_blank" rel="noopener">Link</a>].
 
@@ -118,7 +118,7 @@
 
           <p>
             &bull; 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Kaveh Zamani and Boris Jeremić. Procedure to Build Trust in Nonlinear Elastoplastic
             Integration Algorithm: Solution and Code Verification. In Review, Engineering with Computers, 2017.
           </p>
@@ -126,7 +126,7 @@
           <p>
             &bull; 
             José Abell, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             and Boris Jeremić. Generic Programming Techniques for Template Elastic
             Plastic Computations In Review, ASCE Journal of Computing in Civil Engineering, 2017.
           </p>
@@ -134,7 +134,7 @@
           <p>
             &bull; 
             José Abell, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             and Boris Jeremić. Domain Specific Language for Finite Element Modeling and
             Simulation In Review, ASCE Journal of Computing in Civil Engineering, 2017
           </p>
@@ -144,7 +144,7 @@
           <p>
             &bull; 
             Han Yang, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Sumeet Kumar Sinha, Hexiang Wang, and Boris Jeremić. Energy Dissipation in Soil Structure Interaction System. Abstract Accepted for the 5th Geotechnical Earthquake Engineering and Soil Dynamics (GEESD) Conference, Austin, Texas. June 10-13, 2018.
           </p>
 
@@ -152,7 +152,7 @@
           <p>
             &bull; 
             Han Yang, Sumeet Kumar Sinha, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             and Boris Jeremić. Evaluation of Energy Dissipation in Elastic-Plastic Solids. Proceedings of the 15th International Conference of the International Association for Computer Methods and Advances in Geomechanics (IACMAG), Wuhan, China. October 19-23, 2017.
             [<a href="https://www.researchgate.net/publication/320624384_Evaluation_of_Energy_Dissipation_in_Elastic-Plastic_Solids" target="_blank" rel="noopener">Link</a>].
           </p>
@@ -161,7 +161,7 @@
           <p>
             &bull; 
             Sumeet Kumar Sinha, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Han Yang, Hexiang Wang, and Boris Jeremić. 3-D non-linear modeling and its effects in earthquake soil-structure interaction. Proceedings of the 21st Structural Mechanics in Reactor Technology (SMiRT) Conference, Busan, Korea. August 20-25, 2017.
             [<a href="https://www.researchgate.net/publication/320624297_3-D_Non-Linear_Earthquake_Soil-Structure_Interaction_Modeling_of_Embedded_Small_Modular_Reactor_SMR" target="_blank" rel="noopener">Link</a>].
           </p>
@@ -169,7 +169,7 @@
         <h2>Dissertation</h2>
         <p>
           &bull; 
-          <strong>Yuan Feng</strong>, 
+          <strong>Yachen LUO</strong>, 
           High-Fidelity Inelastic Finite Element Analysis on Parallel Computers
           [<a href="https://search.proquest.com/openview/2fbd75603fd188b32e932d3239dba03a/1?pq-origsite=gscholar&cbl=18750&diss=y" target="_blank" rel="noopener">Link</a>].
         </p>
@@ -178,7 +178,7 @@
           <p>
             &bull; 
             Sinha, Sumeet K. and 
-            <strong>Yuan Feng</strong>.
+            <strong>Yachen LUO</strong>.
             Preconditioning techniques for large scale iterative linear system solvers. University of California Davis, June 2016.
             [<a href="https://www.researchgate.net/publication/304164556_Preconditioning_Techniques_for_Large_Scale_Iterative_Linear_System_Solvers" target="_blank" rel="noopener">Link</a>].
 
@@ -188,20 +188,20 @@
         <h2>Academic Presentations and Posters</h2>
           <p>
             &bull; 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Sumeet Kumar Sinha, José Antonio Abell, Han Yang, Fatamah Behbehani, Nebojša Orbović, Davis B McCallen, and Boris Jeremić. Nonlinear effects in Earthquake Soil Structure Interaction of Nuclear Power Plants. The 21st Structural Mechanics in Reactor Technology (SMiRT) Conference, Busan, Korea. August 20-25, 2017. (pdf)
           </p>
 
           <p>
             &bull; 
             José Antonio Abell, 
-            <strong>Yuan Feng</strong>,
+            <strong>Yachen LUO</strong>,
             Sumeet Kumar Sinha, Nebojša Orbović, Davis B McCallen, and Boris Jeremić. 3D vs 1D vs 3x1D Ground Motions and the Earthquake Soil Structure Interaction. The 21st Structural Mechanics in Reactor Technology (SMiRT) Conference, Busan, Korea. August 20-25, 2017. (pdf)
           </p>
 
           <p>
             &bull; 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Han Yang, Hexiang Wang, Dragan Kovacevic, Sumeet Kumar Sinha, Jose Abell, Fatamah Behbehani and Boris Jeremić. 
             Real ESSI Simulator:
             Realistic Modeling and Simulation of
@@ -218,14 +218,14 @@
           <p>
             &bull; 
             José Abell, 
-            <strong>Yuan Feng</strong>, 
+            <strong>Yachen LUO</strong>, 
             Sumeet Kumar Sinha, Fatemah Behbehani and Boris Jeremić. Real ESSI Simulator Domain Specific Language (DSL) UCD–CompGeoMech–02–2017.
           </p>
 
         <p>
           &bull; 
           José Abell, Sumeet Kumar Sinha, 
-          <strong>Yuan Feng</strong>
+          <strong>Yachen LUO</strong>
           and Boris Jeremić. Real ESSI Simulator Executable Build Procedures. UCD-CompGeoMech-03-2017.
         </p>
 
@@ -233,7 +233,7 @@
         <p>
           &bull; 
           José Abell, Sumeet Kumar Sinha,
-          <strong>Yuan Feng</strong>
+          <strong>Yachen LUO</strong>
           and Boris Jeremić. Real ESSI Simulator Output Formats. UCD–CompGeoMech–03–2017.
         </p>
 
@@ -262,7 +262,7 @@
          <a href="Gallery.html">Gallery</a>
       </p>
       
-      <p>Copyright &copy; Yuan Feng  
+      <p>Copyright &copy; Yachen LUO  
         <!-- | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> |  -->
         <!-- <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> |  -->
         <!-- <a href="http://www.html5webtemplates.co.uk">HTML5 Web Templates</a> -->
